--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 ]
 keywords = ["gym", "reinforcement learning", "dark souls"]
 dependencies = [
-    "gymnasium >= 0.27.0",
+    "gymnasium == 0.27.1",
     "numpy >= 1.21.0",
     "psutil >= 5.9.0",
     "Pymem >= 1.10.0",
@@ -30,6 +30,8 @@ dependencies = [
     "PyYAML >= 6.0",
     "opencv-python >= 4.0.0",
     "pixel-forge>=0.1.1; platform_system=='Windows'",
+    "fire",
+    "pytest",
 ]
 
 # random.choice does not work with numpy on 3.11.0/1 (https://github.com/python/cpython/issues/100805)
